# mlx-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  install.sh  llmemo.md  mlxer.spec  prompt.md  pyproject.toml  stakeholder.html  technical.md
.github/workflows/: release.yml  test.yml
mlx_manager/: __main__.py  _server_shim.py  benchmark.py  bot.py  cli.py  config.py  context.py  models.py  providers.py  server.py
mlx_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mlxer/: __main__.py  _server_shim.py  bot.py  cli.py  config.py  models.py  paths.py  providers.py  server.py
tests/: conftest.py  test_benchmark.py  test_bot.py  test_cli_json.py  test_cli_load.py  test_config.py  test_context.py  test_doctor_fix.py  test_health.py  test_models.py  test_providers.py  test_server_safety.py  test_server_shim.py  test_server_shim_unit.py
