[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-manager"
version = "0.1.0"
description = "Headless controller for the MLX language-model HTTP server on Apple Silicon."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "rs" }]
dependencies = [
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
mlx-manager = "mlx_manager.cli:main"

[tool.setuptools.packages.find]
include = ["mlx_manager*"]
exclude = ["tests*"]
