[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-manager"
version = "0.1.0"
description = "Headless controller for the MLX language-model HTTP server on Apple Silicon."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "rs" }]
keywords = ["mlx", "mlx-lm", "apple-silicon", "llm", "local-llm", "cli", "opencode"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/Pixie-sh/mlx-manager"
Repository = "https://github.com/Pixie-sh/mlx-manager"
Issues = "https://github.com/Pixie-sh/mlx-manager/issues"
Changelog = "https://github.com/Pixie-sh/mlx-manager/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=7", "huggingface-hub>=0.20"]
release = ["build>=1.2", "pyinstaller>=6.0", "twine>=5.0"]

[project.scripts]
mlx-manager = "mlx_manager.cli:main"

[tool.setuptools.packages.find]
include = ["mlx_manager*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
