[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlxer"
version = "0.1.0"
description = "Headless controller for the MLX language-model HTTP server on Apple Silicon."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "rs" }]
keywords = ["mlx", "mlx-lm", "apple-silicon", "llm", "local-llm", "cli", "opencode", "openai-compatible", "mlx-server", "headless", "on-device-llm", "local-inference", "mlxlm", "apple-silicon-llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/Pixie-sh/mlxer"
Repository = "https://github.com/Pixie-sh/mlxer"
Issues = "https://github.com/Pixie-sh/mlxer/issues"
Changelog = "https://github.com/Pixie-sh/mlxer/blob/main/CHANGELOG.md"
PyPI = "https://pypi.org/project/mlxer/"
Documentation = "https://github.com/Pixie-sh/mlxer#readme"

[project.optional-dependencies]
dev = ["pytest>=7", "huggingface-hub>=0.20"]
release = ["build>=1.2", "pyinstaller>=6.0", "twine>=5.0"]

[project.scripts]
mlxer = "mlxer.cli:main"

[tool.setuptools.packages.find]
include = ["mlxer*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
